--- a/src/App.css
+++ b/src/App.css
@@ -57,5 +57,8 @@
   justify-content: flex-start;
   align-items: flex-start;
   border: 1px solid #ffffff;
-  font-size: 30px;
+}
+
+.mail-box {
+  font-size: 24px;
 }
